swagger for current rest done
